# pypackage

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.rst  makenew.sh  pylintrc  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml  envvars.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup/: action.yml
.github/workflows/: _build.yml  _publish.yml  check.yml  format.yml  main.yml  publish-package.yml  publish.yml  version.yml
makenew_pypackage/: __init__.py  todo_test.py
test/: todo_test.py
