[tool.poetry]
name = "makenew-pypackage"
version = "3.22.0"
description = "Package skeleton for a Python module."
authors = ["Evan Sosenko <razorx@evansosenko.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/makenew/pypackage"
repository = "https://github.com/makenew/pypackage"

[tool.poetry.dependencies]
python = "^3.10.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.4.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
