[tool.poetry]
name = "makenew-pypackage"
version = "5.0.1"
description = "Package skeleton for a Python module."
authors = ["Evan Sosenko <razorx@evansosenko.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/makenew/pypackage"
repository = "https://github.com/makenew/pypackage"

[tool.poetry.dependencies]
python = "^3.11.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-runner = "^6.0.0"
pytest-watch = "^4.2.0"
rstcheck = "^6.1.2"

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"
